# AI_MidLayer

./: .gitignore  Gemini-QMD 项目技术深度解析.md  Gemini-大模型使用痛点与解决方案.md  README.md  openclaw.md  pyproject.toml
docs/: index.md
docs/api/: cli.md  knowledge.md  llm.md  rag.md
docs/architecture/: overview.md
docs/guides/: quickstart.md
memory-bank/: @architecture.md  @backlog.md  @implementation-plan.md  @progress.md  @tech-stack.md
scripts/: compare_embeddings.py  dogfood_test.py  realistic_benchmark.py
src/ai_midlayer/: __init__.py  config.py
src/ai_midlayer/agents/: __init__.py  base.py  llm_agent.py  parser.py  protocols.py  structure.py
src/ai_midlayer/cli/: __init__.py  main.py
src/ai_midlayer/knowledge/: __init__.py  bm25.py  chunker.py  embedding.py  hybrid.py  index.py  models.py  ocr.py  retriever.py  store.py
src/ai_midlayer/knowledge/parsers/: __init__.py  base.py  pdf.py
src/ai_midlayer/llm/: __init__.py
src/ai_midlayer/orchestrator/: __init__.py
src/ai_midlayer/rag/: __init__.py  expansion.py  fusion.py  reranker.py
tests/: test_agents.py  test_hybrid.py  test_hybrid_e2e.py  test_index.py  test_knowledge.py  test_llm.py  test_parsing.py  test_rag.py  test_reranker.py
