[project]
name = "ai-midlayer"
version = "0.1.0"
description = "AI Context Middle Layer - Transform messy project files into high-quality LLM context"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AI MidLayer Team" }
]
dependencies = [
    "langgraph>=0.2.0",
    "litellm>=1.0.0",
    "lancedb>=0.5.0",
    "unstructured>=0.10.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
midlayer = "ai_midlayer.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_midlayer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
